main: Added some helper methods to the application